tests/enums_off/enums_off.exp
Error ------------------------------------------------------------------------------------------------------- lib.js:4:3

Flow Enums are not enabled. You may opt-in to using enums by putting `enums=true` into the `[options]` section of your
`.flowconfig`. [illegal-enum]

        v-------------------------------------------
   4|   declare enum G { // ERROR: enums not enabled
   5|     J,
   6|     K,
   7|   }
        ^


Error ------------------------------------------------------------------------------------------------------ lib.js:8:18

Flow Enums are not enabled. You may opt-in to using enums by putting `enums=true` into the `[options]` section of your
`.flowconfig`. [illegal-enum]

                        v-----------------------------------
    8|   declare export enum H { // ERROR: enums not enabled
    9|     X,
   10|     Y,
   11|   }
         ^


Error -------------------------------------------------------------------------------------------------- declared.js:3:1

Flow Enums are not enabled. You may opt-in to using enums by putting `enums=true` into the `[options]` section of your
`.flowconfig`. [illegal-enum]

      v---------------------------------------
   3| declare enum E { // ERROR: enums are off
   4|   A,
   5|   B,
   6| }
      ^


Error ------------------------------------------------------------------------------------------------- declared.js:8:16

Cannot resolve name `E`. [cannot-resolve-name]

   8| declare var e: E; // ERROR: can't resolve name `E`
                     ^


Error ------------------------------------------------------------------------------------------------------ test.js:3:1

Flow Enums are not enabled. You may opt-in to using enums by putting `enums=true` into the `[options]` section of your
`.flowconfig`. [illegal-enum]

      v-------------------------------
   3| enum E { // Error: enums are off
   4|   A,
   5|   B,
   6| }
      ^


Error ----------------------------------------------------------------------------------------------------- test.js:8:16

Cannot resolve name `E`. [cannot-resolve-name]

   8| declare var x: E; // Error: can't resolve name `E`
                     ^



Found 6 errors
